<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">TrackTimer</string>
    <string name="default_speed" tools:ignore="MissingTranslation">1.0</string>
    <string name="start_timing" tools:ignore="MissingTranslation">Start</string>
    <string name="lap_timing" tools:ignore="MissingTranslation">Lap</string>
    <string name="stop_timing" tools:ignore="MissingTranslation">Stop</string>
    <string name="clear_timing" tools:ignore="MissingTranslation">Clear</string>
    <string name="guide_title" tools:ignore="MissingTranslation">How to use TrackTimer</string>
    <string name="guide_subtitle_1" tools:ignore="MissingTranslation">Video controls</string>
    <string name="guide_import_video" tools:ignore="MissingTranslation">Select a new video</string>
    <string name="guide_decrease_speed" tools:ignore="MissingTranslation">Use the minus button to decrease the playback speed, anything lower than 1.0 is slower than normal speed</string>
    <string name="guide_increase_speed" tools:ignore="MissingTranslation">Use the add button to increase the playback speed</string>
    <string name="guide_play_video" tools:ignore="MissingTranslation">Play/pause video playback</string>
    <string name="guide_rewind_video" tools:ignore="MissingTranslation">Rewinds up to 5 seconds of video</string>
    <string name="guide_fast_forward_video" tools:ignore="MissingTranslation">Fast forward up to 5 seconds of video</string>
    <string name="guide_previous_frame" tools:ignore="MissingTranslation">If video is paused, goes to previous frame</string>
    <string name="guide_next_frame" tools:ignore="MissingTranslation">If video is paused, goes to next frame</string>
    <string name="guide_subtitle_2" tools:ignore="MissingTranslation">Timing</string>
    <string name="guide_start_timing" tools:ignore="MissingTranslation">Starts the timer at this precise moment</string>
    <string name="guide_lap_timing" tools:ignore="MissingTranslation">Displays the time since start/lap, as well as the split</string>
    <string name="guide_stop_timing" tools:ignore="MissingTranslation">Stops timing</string>
    <string name="guide_clear_timing" tools:ignore="MissingTranslation">Resets and gets rid of the times display</string>
    <string name="guide_return_button" tools:ignore="MissingTranslation">return</string>
    <string name="preference_first_time_key" tools:ignore="MissingTranslation">preference_first_time_user</string>
    <string name="preference_day_of_year_last_trial" tools:ignore="MissingTranslation">preference_day_of_year_last_trial</string>
    <string name="preference_count_video_timing_trial" tools:ignore="MissingTranslation">preference_count_video_timing_trial</string>
    <string name="preference_is_trial_on" tools:ignore="MissingTranslation">preference__is_trial_on</string>
    <string name="preference_is_subscribed" tools:ignore="MissingTranslation">preference_is_subscribed</string>

    <string name="next_button" tools:ignore="MissingTranslation">Next</string>
    <string name="timestopper_features" tools:ignore="MissingTranslation">Features</string>
    <string name="onboarding_screen_2_text" tools:ignore="MissingTranslation">Use the buttons on the right panel with slow motion or frame-by-frame navigation to get accurate timings</string>
    <string name="feature_1" tools:ignore="MissingTranslation">Frame-by-frame navigation</string>
    <string name="video_timing" tools:ignore="MissingTranslation">Video timing</string>
    <string name="feature_2" tools:ignore="MissingTranslation">Video speed control</string>
    <string name="feature_3" tools:ignore="MissingTranslation">Zoom in/out</string>
    <string name="dialog_quit" tools:ignore="MissingTranslation">Are you sure you want to leave this video?</string>
    <string name="permission_toast" tools:ignore="MissingTranslation">Please accept storage access permissions to select videos</string>

    <string name="no_subscriptions_available" tools:ignore="MissingTranslation">No subscriptions available</string>
    <string name="go_unlimited" tools:ignore="MissingTranslation">GO UNLIMITED</string>
    <string name="yes_string" tools:ignore="MissingTranslation">Yes</string>
    <string name="yes_string_exclamation" tools:ignore="MissingTranslation">YES!</string>
    <string name="next_time" tools:ignore="MissingTranslation">Next time</string>
    <string name="get_subscription_prompt" tools:ignore="MissingTranslation">You have used your free trial today, get unlimited use through a subscription?</string>
    <string name="trial_prompt_segment_1" tools:ignore="MissingTranslation">Free version will only allow</string>
    <string name="trial_prompt_segment_2" tools:ignore="MissingTranslation">videos to be timed per day,</string>
    <string name="trial_prompt_segment_3" tools:ignore="MissingTranslation">your count is:</string>
    <string name="trial_prompt_segment_4" tools:ignore="MissingTranslation">, continue?</string>
    <string name="subscription_explanation" tools:ignore="MissingTranslation">TrackTimer is ad-free and relies on user subscriptions.The free version of TrackTimer allows you to use the timing feature for 1 video per day.\n\nIf you wish to use the timing tool limitlessly, there is a subscription available.\n\nIt costs 4.99€/year, and you can free trial it for a week before any payments are made. If you wish to cancel before the trial is over, head to Play Store, and cancel your subscription. More info https://support.google.com/googleplay/answer/7018481</string>
    <string name="support_title" tools:ignore="MissingTranslation">Support</string>
    <string name="support_text" tools:ignore="MissingTranslation">If you have any enquiries, suggestions or technical issues you wish to report, email pablo.trescoli@gmail.com</string>
    <string name="already_subscribed" tools:ignore="MissingTranslation">You are already subscribed</string>
<!--    <string name="cancel_subscription_info" tools:ignore="MissingTranslation">To cancel your subscription, go to Play Store Subscriptions, more info <a href="https://support.google.com/googleplay/answer/7018481">HERE</a>.\n\nThis will cancel your next (or first ever, if in 7 day trial period) payment but it wont work as a refund.</string>-->
    <string name="cancel_subscription_info" tools:ignore="MissingTranslation">To cancel your subscription, go to Play Store Subscriptions, more info here support.google.com/googleplay/answer/7018481 \n\nThis will cancel your next (or first ever, if in 7 day trial period) payment but it wont work as a refund.</string>
    <string name="internet_problem_text" tools:ignore="MissingTranslation">There seems to be a problem, make sure you have Internet connection and try again</string>
    <string name="tap_to_select_video" tools:ignore="MissingTranslation">Tap here to select a video</string>
    <string name="previous_button" tools:ignore="MissingTranslation">Previous</string>
    <string name="timing_error_exp" tools:ignore="MissingTranslation">The timing error for any given time split will increase when the video frame rate is lower. The error thresholds for 30 and 60fps are as follows:\n60 fps {-0.009, +0.009}s\n30 fps {-0.018, +0.018}s</string>
    <string name="timing_error" tools:ignore="MissingTranslation">Timing error</string>
    <string name="preference_has_reviewed" tools:ignore="MissingTranslation">preference_has_reviewed</string>
    <string name="preference_date_rating_prompt" tools:ignore="MissingTranslation">preference_date_rating_prompt</string>
    <string name="rating_prompt" tools:ignore="MissingTranslation">Rate our app if you are finding it helpful!</string>
    <string name="not_now_string" tools:ignore="MissingTranslation">Not now</string>


</resources>